# AgenticRAG

./: ingestion.py  pyproject.toml
.chroma_db/: chroma.sqlite3
graph/: graph.py  state.py
graph/chains/: generation  retrieval_grader.py
graph/chains/tests/: test_chains.py
graph/nodes/: generate  grade_document  retrieve  web_search
