[project]
name = "agenticrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "black>=26.5.1",
    "chromadb>=1.5.9",
    "isort>=8.0.1",
    "langchain>=1.3.9",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.2",
    "langchain-text-splitters>=1.1.2",
    "langchainhub>=0.1.21",
    "langgraph>=1.2.5",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "tavily-python>=0.7.26",
]
